--- a/.gitignore
+++ b/.gitignore
@@ -1,32 +1,24 @@
-# Object files
-*.o
-*.ko
-*.obj
-*.elf
+# Windows image file caches
+Thumbs.db
+ehthumbs.db
 
-# Precompiled Headers
-*.gch
-*.pch
+# Folder config file
+Desktop.ini
 
-# Libraries
-*.lib
-*.a
-*.la
-*.lo
+# Recycle Bin used on file shares
+$RECYCLE.BIN/
 
-# Shared objects (inc. Windows DLLs)
-*.dll
-*.so
-*.so.*
-*.dylib
+# Windows Installer files
+*.cab
+*.msi
+*.msm
+*.msp
 
-# Executables
-*.exe
-*.out
-*.app
-*.i*86
-*.x86_64
-*.hex
+# Windows shortcuts
+*.lnk
+
+# Compressed files
+*.zip
 
 # =========================
 # Operating System Files
@@ -53,24 +45,16 @@ Network Trash Folder
 Temporary Items
 .apdisk
 
-# Windows
-# =========================
-
-# Windows image file caches
-Thumbs.db
-ehthumbs.db
-
-# Folder config file
-Desktop.ini
-
-# Recycle Bin used on file shares
-$RECYCLE.BIN/
-
-# Windows Installer files
-*.cab
-*.msi
-*.msm
-*.msp
-
-# Windows shortcuts
-*.lnk
+# ==============================
+# Foxonix Specific Files and Folders
+# ==============================
+*.asm
+*.dbg
+*.log
+*.rpt
+SIL#XO.WAV
+SN0#XO.WAV
+SN1#XO.WAV
+/audio_12k
+/audio_44k
+/audio_48k
